Step-1: Simple single thread medical appointment system
It, fail on a concurrent multi-thread scenario as expected